// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init-apfauth (LONG) apf bad ds prefix 1`] = `
"cp: FSUM6258 cannot open file "//'BAD.DS.PREFIX.NOEXIST.SZWESAMP(ZWEGENER)'": EDC5049I The specified file name could not be located. (errno2=0xC00B0641)
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> APF authorize load libraries
ERROR: ZWEL0143E Cannot find data set member 'BAD.DS.PREFIX.NOEXIST.SZWESAMP(ZWEGENER)'. You may need to re-run zwe install."
`;

exports[`init-apfauth (LONG) apf empty ds prefix 1`] = `
"Error: Validation of FILE(/test/dir/zowe.test.yaml):FILE(/test/dir/files/defaults.yaml) against schema /test/dir/schemas/zowe-yaml-schema.json:/test/dir/schemas/server-common.json found invalid JSON Schema data
Validity Exceptions(s) with object at
  Validity Exceptions(s) with object at /zowe
    Validity Exceptions(s) with object at /zowe/setup
      Validity Exceptions(s) with object at /zowe/setup/dataset
        Validity Exceptions(s) with string at /zowe/setup/dataset/prefix
          string too short (len=0) '' 0 < MIN=3 at /zowe/setup/dataset/prefix
          string pattern match fail s='', pat='^([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@\\-]){0,7}(\\.([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@\\-]){0,7}){0,11}$', at /zowe/setup/dataset/prefix"
`;

exports[`init-apfauth (LONG) apf empty jcllib 1`] = `
"Error: Validation of FILE(/test/dir/zowe.test.yaml):FILE(/test/dir/files/defaults.yaml) against schema /test/dir/schemas/zowe-yaml-schema.json:/test/dir/schemas/server-common.json found invalid JSON Schema data
Validity Exceptions(s) with object at
  Validity Exceptions(s) with object at /zowe
    Validity Exceptions(s) with object at /zowe/setup
      Validity Exceptions(s) with object at /zowe/setup/dataset
        Validity Exceptions(s) with string at /zowe/setup/dataset/jcllib
          string too short (len=0) '' 0 < MIN=3 at /zowe/setup/dataset/jcllib
          string pattern match fail s='', pat='^([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@\\-]){0,7}(\\.([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@\\-]){0,7}){0,11}$', at /zowe/setup/dataset/jcllib"
`;

exports[`init-apfauth (SHORT) apf bad authLoadLib 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> APF authorize load libraries
ERROR: ZWEL0324E: The dataset specified in 'zowe.setup.dataset.authLoadlib' does not exist."
`;

exports[`init-apfauth (SHORT) apf bad authPluginLib 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> APF authorize load libraries
ERROR: ZWEL0324E: The dataset specified in 'zowe.setup.dataset.authPluginLib' does not exist."
`;

exports[`init-apfauth (SHORT) apf empty jcllib post-generate 1`] = `
"Error: Validation of FILE(/test/dir/zowe.test.yaml):FILE(/test/dir/files/defaults.yaml) against schema /test/dir/schemas/zowe-yaml-schema.json:/test/dir/schemas/server-common.json found invalid JSON Schema data
Validity Exceptions(s) with object at
  Validity Exceptions(s) with object at /zowe
    Validity Exceptions(s) with object at /zowe/setup
      Validity Exceptions(s) with object at /zowe/setup/dataset
        Validity Exceptions(s) with string at /zowe/setup/dataset/jcllib
          string too short (len=0) '' 0 < MIN=3 at /zowe/setup/dataset/jcllib
          string pattern match fail s='', pat='^([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@\\-]){0,7}(\\.([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@\\-]){0,7}){0,11}$', at /zowe/setup/dataset/jcllib"
`;

exports[`init-apfauth (SHORT) apf empty pluginlib 1`] = `
"Error: Validation of FILE(/test/dir/zowe.test.yaml):FILE(/test/dir/files/defaults.yaml) against schema /test/dir/schemas/zowe-yaml-schema.json:/test/dir/schemas/server-common.json found invalid JSON Schema data
Validity Exceptions(s) with object at
  Validity Exceptions(s) with object at /zowe
    Validity Exceptions(s) with object at /zowe/setup
      Validity Exceptions(s) with object at /zowe/setup/dataset
        Validity Exceptions(s) with string at /zowe/setup/dataset/authPluginLib
          string too short (len=0) '' 0 < MIN=3 at /zowe/setup/dataset/authPluginLib
          string pattern match fail s='', pat='^([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@\\-]){0,7}(\\.([A-Z\\$\\#\\@]){1}([A-Z0-9\\$\\#\\@\\-]){0,7}){0,11}$', at /zowe/setup/dataset/authPluginLib"
`;

exports[`init-apfauth (SHORT) apf empty pluginlib 2`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> APF authorize load libraries
ZWEL0159I: zowe.setup.dataset.authPluginLib is not defined in Zowe YAML configuration file. Skipping.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEIAPF2) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEIAPF2)
--- JCL Content ---
//ZWEIAPF2 JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//*  This JCL is used to set APF for the two datasets of Zowe
//*  which need it. You can issue this, or use another
//*  way to accomplish the task.
//*
//*  The following variables are derived from the zowe YAML config:
//*  LOADLIB: the dataset that holds the APF portion of Zowe.
//*    If not set, zowe.setup.dataset.prefix + SZWEAUTH is used.
//*  PLUGLIB: the dataset that holds the extensions for ZIS.
//*    If not set, no PLUGLIB authorization is done.
//*
//*  Note: if you plan NOT to use Zowe Cross Memory Server at all,
//*    you can skip this step.
//*
//*********************************************************************
//*
//APFAUTH EXEC PGM=BPXBATCH
//BPXPRINT DD SYSOUT=*
//STDOUT   DD SYSOUT=*
//STDERR   DD SYSOUT=*
//STDPARM DD *
SH cd '/test/dir' &&
cd bin/utils &&
LOADLIB='TEST.DATASET.PFX.SZWELOAD' &&
LOADLOC="VOLUME=TSTVOL" &&
./opercmd.rex "SETPROG APF,ADD,DSN=$LOADLIB,$LOADLOC"
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe load libraries are APF authorized successfully."
`;

exports[`init-apfauth (SHORT) apf simple --dry-run 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> APF authorize load libraries
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEIAPF2) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEIAPF2)
--- JCL Content ---
//ZWEIAPF2 JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//*  This JCL is used to set APF for the two datasets of Zowe
//*  which need it. You can issue this, or use another
//*  way to accomplish the task.
//*
//*  The following variables are derived from the zowe YAML config:
//*  LOADLIB: the dataset that holds the APF portion of Zowe.
//*    If not set, zowe.setup.dataset.prefix + SZWEAUTH is used.
//*  PLUGLIB: the dataset that holds the extensions for ZIS.
//*    If not set, no PLUGLIB authorization is done.
//*
//*  Note: if you plan NOT to use Zowe Cross Memory Server at all,
//*    you can skip this step.
//*
//*********************************************************************
//*
//APFAUTH EXEC PGM=BPXBATCH
//BPXPRINT DD SYSOUT=*
//STDOUT   DD SYSOUT=*
//STDERR   DD SYSOUT=*
//STDPARM DD *
SH cd '/test/dir' &&
cd bin/utils &&
LOADLIB='TEST.DATASET.PFX.SZWELOAD' &&
LOADLOC="VOLUME=TSTVOL" &&
./opercmd.rex "SETPROG APF,ADD,DSN=$LOADLIB,$LOADLOC" &&
PLUGLIB='TEST.DATASET.PFX.ZWESAPL' &&
PLUGLOC="VOLUME=TSTVOL" &&
./opercmd.rex "SETPROG APF,ADD,DSN=$PLUGLIB,$PLUGLOC"
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe load libraries are APF authorized successfully."
`;

exports[`init-apfauth (SHORT) apf sms-managed authLoadLib 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> APF authorize load libraries
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEIAPF2) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEIAPF2)
--- JCL Content ---
//ZWEIAPF2 JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//*  This JCL is used to set APF for the two datasets of Zowe
//*  which need it. You can issue this, or use another
//*  way to accomplish the task.
//*
//*  The following variables are derived from the zowe YAML config:
//*  LOADLIB: the dataset that holds the APF portion of Zowe.
//*    If not set, zowe.setup.dataset.prefix + SZWEAUTH is used.
//*  PLUGLIB: the dataset that holds the extensions for ZIS.
//*    If not set, no PLUGLIB authorization is done.
//*
//*  Note: if you plan NOT to use Zowe Cross Memory Server at all,
//*    you can skip this step.
//*
//*********************************************************************
//*
//APFAUTH EXEC PGM=BPXBATCH
//BPXPRINT DD SYSOUT=*
//STDOUT   DD SYSOUT=*
//STDERR   DD SYSOUT=*
//STDPARM DD *
SH cd '/test/dir' &&
cd bin/utils &&
LOADLIB='TEST.DATASET.PFX.APF.LOADLIB' &&
LOADLOC=SMS &&
./opercmd.rex "SETPROG APF,ADD,DSN=$LOADLIB,$LOADLOC" &&
PLUGLIB='TEST.DATASET.PFX.ZWESAPL' &&
PLUGLOC="VOLUME=TSTVOL" &&
./opercmd.rex "SETPROG APF,ADD,DSN=$PLUGLIB,$PLUGLOC"
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe load libraries are APF authorized successfully."
`;

exports[`init-apfauth (SHORT) apf sms-managed authLoadLib and authPluginLib 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> APF authorize load libraries
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEIAPF2) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEIAPF2)
--- JCL Content ---
//ZWEIAPF2 JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//*  This JCL is used to set APF for the two datasets of Zowe
//*  which need it. You can issue this, or use another
//*  way to accomplish the task.
//*
//*  The following variables are derived from the zowe YAML config:
//*  LOADLIB: the dataset that holds the APF portion of Zowe.
//*    If not set, zowe.setup.dataset.prefix + SZWEAUTH is used.
//*  PLUGLIB: the dataset that holds the extensions for ZIS.
//*    If not set, no PLUGLIB authorization is done.
//*
//*  Note: if you plan NOT to use Zowe Cross Memory Server at all,
//*    you can skip this step.
//*
//*********************************************************************
//*
//APFAUTH EXEC PGM=BPXBATCH
//BPXPRINT DD SYSOUT=*
//STDOUT   DD SYSOUT=*
//STDERR   DD SYSOUT=*
//STDPARM DD *
SH cd '/test/dir' &&
cd bin/utils &&
LOADLIB='TEST.DATASET.PFX.SZWELOAD' &&
LOADLOC=SMS &&
./opercmd.rex "SETPROG APF,ADD,DSN=$LOADLIB,$LOADLOC" &&
PLUGLIB='TEST.DATASET.PFX.ZWESAPL' &&
PLUGLOC=SMS &&
./opercmd.rex "SETPROG APF,ADD,DSN=$PLUGLIB,$PLUGLOC"
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe load libraries are APF authorized successfully."
`;

exports[`init-apfauth (SHORT) apf sms-managed authPluginLib 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
-------------------------------------------------------------------------------
>> APF authorize load libraries
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEIAPF2) , Executable JCL: TEST.DATASET.PFX.JCLLIB(ZWEIAPF2)
--- JCL Content ---
//ZWEIAPF2 JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//*  This JCL is used to set APF for the two datasets of Zowe
//*  which need it. You can issue this, or use another
//*  way to accomplish the task.
//*
//*  The following variables are derived from the zowe YAML config:
//*  LOADLIB: the dataset that holds the APF portion of Zowe.
//*    If not set, zowe.setup.dataset.prefix + SZWEAUTH is used.
//*  PLUGLIB: the dataset that holds the extensions for ZIS.
//*    If not set, no PLUGLIB authorization is done.
//*
//*  Note: if you plan NOT to use Zowe Cross Memory Server at all,
//*    you can skip this step.
//*
//*********************************************************************
//*
//APFAUTH EXEC PGM=BPXBATCH
//BPXPRINT DD SYSOUT=*
//STDOUT   DD SYSOUT=*
//STDERR   DD SYSOUT=*
//STDPARM DD *
SH cd '/test/dir' &&
cd bin/utils &&
LOADLIB='TEST.DATASET.PFX.SZWELOAD' &&
LOADLOC="VOLUME=TSTVOL" &&
./opercmd.rex "SETPROG APF,ADD,DSN=$LOADLIB,$LOADLOC" &&
PLUGLIB='TEST.DATASET.PFX.APF.PLUGLIB' &&
PLUGLOC=SMS &&
./opercmd.rex "SETPROG APF,ADD,DSN=$PLUGLIB,$PLUGLOC"
//*
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly
>> Command run successfully.
>> Zowe load libraries are APF authorized successfully."
`;
